--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=biblioteca
+
+spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
