--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,13 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
-spring.mail.host: smtp.gmail.com
-spring.mail.port: 465
-spring.mail.username: projetobiblioteca31@gmail.com
-spring.mail.password: 123projeto456@
-spring.mail.properties.mail.smtp.auth: true
-spring.mail.properties.mail.smtp.starttls.enable: true
-spring.mail.properties.mail.smtp.starttls.required: true
-spring.mail.properties.mail.smtp.ssl.enable: true
-spring.mail.test-connection: true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=projetobiblioteca31@gmail.com
+spring.mail.password=123projeto456@
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.sockFactory.port=465
+spring.mail.properties.mail.smtp.sockFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.sockFactory.fallback=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
