--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
-spring.mail.username='projetobiblioteca31@gmail.com'
+spring.mail.username=projetobiblioteca31@gmail.com
 #conta--> 456projeto654@
-spring.mail.password='qjvu zacz ouae dbuc'
+spring.mail.password=qjvu zacz ouae dbuc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.sockFactory.port=465
 spring.mail.properties.mail.smtp.sockFactory.class=javax.net.ssl.SSLSocketFactory
